--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-eslint-demo",
+  "name": "typescript-eslint-demo",
   "version": "1.8.0",
-  "description": "The online demo to check `eslint-plugin-vue`.",
+  "description": "An online playground to check `@typescript-eslint/eslint-plugin`.",
   "engines": {
     "node": ">=8"
   },
@@ -16,7 +16,9 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.1.2",
-    "@mysticatea/eslint-plugin": "^6.0.0",
+    "@mysticatea/eslint-plugin": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.1.1",
+    "@typescript-eslint/parser": "^1.1.1",
     "appcache-manifest": "^2.1.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -24,7 +26,6 @@
     "cross-env": "^5.1.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
     "eslint4b": "^5.7.0",
     "file-loader": "^2.0.0",
     "fs-extra": "^7.0.0",
@@ -35,12 +36,10 @@
     "postcss-preset-env": "^6.1.2",
     "rimraf": "^2.6.2",
     "string-replace-loader": "^1.3.0",
-    "typescript": "~3.1.6",
-    "typescript-eslint-parser": "^21.0.1",
+    "typescript": "^3.3.1",
     "url-loader": "^1.1.2",
     "vue": "^2.5.9",
     "vue-eslint-editor": "^0.1.2",
-    "vue-eslint-parser": "^3.2.2",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.9",
     "webpack": "^4.21.0",
@@ -51,27 +50,27 @@
     "build": "run-s -s clean build:*",
     "build:html": "appcache-manifest-fixer src/index.html -o dist/index.html",
     "build:js": "webpack --env.production --progress",
-    "build:manifest": "appcache-manifest \"dist/**/*.{css,html,js,svg,eot,ttf,woff,woff2}\" --prefix /vue-eslint-demo --network-star -o dist/index.appcache",
+    "build:manifest": "appcache-manifest \"dist/**/*.{css,html,js,svg,eot,ttf,woff,woff2}\" --prefix /typescript-eslint-demo --network-star -o dist/index.appcache",
     "build:versions": "node scripts/make-versions",
     "clean": "rimraf dist",
     "deploy": "node scripts/deploy",
     "lint": "eslint . --ext .js,.vue --rulesdir eslint-rules",
     "preversion": "run-s -s lint build",
     "postversion": "git push --tags && git push",
-    "update-deps": "npm install eslint@latest eslint-plugin-vue@latest vue-eslint-parser@latest babel-eslint@latest",
+    "update-deps": "npm install eslint@latest @typescript-eslint/eslint-plugin@latest @typescript-eslint/parser@latest",
     "watch": "run-p -s watch:*",
     "watch:html": "cpx src/index.html dist --watch",
     "watch:js": "webpack-dev-server --open --hot"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mysticatea/vue-eslint-demo.git"
+    "url": "git+https://github.com/mysticatea/typescript-eslint-demo.git"
   },
   "keywords": [],
   "author": "Toru Nagashima (https://github.com/mysticatea)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mysticatea/vue-eslint-demo/issues"
+    "url": "https://github.com/mysticatea/typescript-eslint-demo/issues"
   },
-  "homepage": "https://github.com/mysticatea/vue-eslint-demo#readme"
+  "homepage": "https://github.com/mysticatea/typescript-eslint-demo#readme"
 }
